# tg-focus

./: .clang-format  .dir-locals.el  .gitignore  CHANGELOG  CMakeLists.txt  Cargo.toml  ChangeLog  Containerfile  Makefile  README.md  README.old  README.org  README.txt  README_es-ES.md  README_zh-CN.md  README_zh.md  app_build.bash  build_app.bash  build_app2.bash  build_app3.bash  build_tdlib.bash  build_tdlib2.bash  build_tgfocus.bash  build_tgfocus2.bash  build_tgfocus3.bash  dl-3rd.bash  dl-deps.bash  oci_build.bash
.github/: FUNDING.yml
.github/actions/build-artifacts/: action.yml
.github/workflows/: build-aarch64.yml  build-image.yml  build-push-image.yml  build-tdlib.yml  build-tgfocus.yml  build-x86_64.yml  build.yml  create-github-package.yml  linux-aarch64.yml  linux-x86_64.yml  release-tgfocus.yml  tdlib-gitcmm-default-alp318-x64.yml  tdlib-gitcmm-gcc12-deb10-x64.yml  tgfocus-gittag-x64-linux-gnu.yml  tgfocus-gittag-x64-linux-musl.yml  tgfocus-x64-linux-musl.yml  toolc-gcc12-deb10-x64.yml  toolc-gcc12-deb11-arm64.yml  toolc-gcc12-deb11-x64.yml
3rd/: setup-openssl-linux.bash  setup-openssl.bash  setup.bash
ci/: .actiontrigger  .before-action.bash  Containerfile  README.md  ___pack-tgfocus-alp321-allarch.bash  ___pack-tgfocus-alp321-x64.bash  ___prep-libs-alp321-allarch.bash  ___vars-allarch-linux-musl.bash  _before-action.bash  actiontrigger  build-tgfocus-alp321-allarch.bash  build-tgfocus-alp321-x64.bash  build-tgfocus-deb11-aarch64.bash  build-tgfocus-deb11-allarch.bash  build-tgfocus-deb11-arm.bash  build-tgfocus-deb11-x64.bash  build-tgfocus-deb11-x86_64.bash  decompress.sh  pack-tgfocus-alp321-allarch.bash  pack-tgfocus-deb11-aarch64.bash  pack-tgfocus-deb11-allarch.bash  pack-tgfocus-deb11-x64.bash  pack-tgfocus-deb11-x86_64.bash  prep-libs-alp321-allarch.bash  prep-libs-alp321-x64.bash  prep-libs-cent9-x86_64.bash  prep-libs-deb11-aarch64.bash  prep-libs-deb11-allarch.bash  prep-libs-deb11-arm.bash  prep-libs-deb11-x64.bash  prep-libs-deb11-x86_64.bash  prep-libs-linux.bash  prep-toolc-deb11-aarch64.bash  prep-toolc-deb11-allarch.bash  prep-toolc-deb11-arm.bash  prep-toolc-deb11-x64.bash  prep-toolc-deb11-x86_64.bash  tdlib-gitcmm-default-alp318-x64.bash  tdlib-gitcmm-gcc12-deb11-allarch.bash  tdlib-gitcmm-gcc12-deb11-x64.bash  (+14 more)
dev/: after-release-curr.bash  before-compile.bash  before-compile.sh  deb10-gcc12.bash  i18n.csv  init-devenv-deb11.bash  init-i18n.bash  install-deps-oci-only.bash  install-deps.bash  install-tdlib-deps.bash  no-tdlib-test-bench.patch  pick-src-fmt  pick-src-tdlib  pick-src-tdlib.prev  pick-src-toml11  pick-ver-tgfocus  pick-ver-tgfocus.prev  sync-versions.bash
docs/: artworks-wanted.md  artworks-wanted.org  building.md  building.org  development.org  i18n.org  imgtuto.excalidraw  internationalization.org
include/: common.hh  conf_state.hh  consumer.hh  focus_filter.hh  focusd_state.hh  posix_regex.hh  producer.hh  switcher.hh  td_auth.hh  td_auth.hh.bak  td_client.hh  tf_data.hh  tfconf_auth.hh  tg_focus_data.hh  tgfocus_state.hh
oci/: build-app-gnulinux.bash  build-app.bash  build-gcc-gnulinux.bash  build-tdlib-gnulinux.bash  build-tdlib.bash  fetch-tdlib.bash  package-app-gnulinux.bash  package-app.bash
oci-img/: build-app.bash  build-tdlib.bash  oci-build-app.bash  oci-package-app.bash  package-app.bash
shared/: Common.hpp  LvLog.cpp  LvLog.hpp  PosixRegex.cpp  TgfData.cpp  TgfData.hpp  TgfFilter.cpp  TgfFilter.hpp  TgfLocale.cpp  TgfLocale.hpp  TgfMsg.cpp  TgfMsg.hpp  common.hh  focus_filter.cc  focus_filter.hh  lv_log.cc  lv_log.hh  tf_data.cc  tf_data.hh  tf_locale.cc  tf_locale.hh  tf_msg.cc  tf_msg.hh  tgf_data.cc  tgf_data.hh  tgf_filter.cc  tgf_filter.hh  tgf_locale.cc  tgf_msg.cc  tgf_msg.hh
src/: chatcmd.cc  chatcmd.hh  collmsg.rs  common.hh  conf_state.cc  errcode.hh  filter.cc  filter.hh  focusd_state.cc  focusd_worker.cc  ipc_client.cc  ipc_client.hh  ipc_msg.cc  ipc_msg.hh  ipc_msg_queue.cc  ipc_msg_queue.hh  ipc_server.cc  ipc_server.hh  lib.rs  local_data.rs  locale_conf.cc  locale_conf.hh  log.cc  log.hh  main.rs  posix_regex.cc  posix_regex.hh  stat.cc  stat.hh  std_comp.hh  td_auth.cc  td_auth.hh  td_client.cc  td_coll.cc  td_coll.hh  td_comp.cc  td_comp.hh  tf-conf.cc  tf-focusd.cc  tf-tstleak.cc  (+11 more)
src/worker/: coll_consumer.cc  coll_consumer.hh  coll_initer.cc  coll_initer.hh  coll_producer.cc  coll_producer.hh  coll_switcher.cc  coll_switcher.hh  conn_listener.cc  conn_listener.hh  ipc_conn_handler.cc  ipc_conn_handler.hh  ipc_msg_dequer.cc  ipc_msg_dequer.hh  ipc_server_initer.cc  ipc_server_initer.hh
test/: CMakeLists.txt  TgfFilter.cpp  focus_filter_test.cc  posix_regex_test.cc  tPosixRegex.cpp  tTgfData.cpp  tTgfFilter.cpp  tTgfLocale.cpp  tTgfMsg.cpp  t_chatcmd.cc  t_filter.cc  t_locale_conf.cc  t_posix_regex.cc  t_tg_msg.cc  t_user_data.cc  t_utfutils.cc  tf_locale.cc  tf_msg_test.cc  tfdata_test.cc  tgf_data.cc  tgf_locale.cc  tgf_msg.cc  tst_focus_filter_config.cc
tf-conf/: auth.cc  auth.hh  state.cc  state.hh  tf_conf.cc
tf-focusd/: collector.cc  collector.hh  state.cc  state.hh  td_client.cc  td_client.hh  tf_focusd.cc  worker.cc  worker.hh
tgf-conf/: Auth.cpp  Auth.hpp  State.cpp  State.hpp  TgfConf.cpp  auth.cc  auth.hh  state.cc  state.hh  tgf_conf.cc
tgf-focusd/: Collector.cpp  Collector.hpp  State.cpp  State.hpp  TgfFocusd.cpp  Worker.cpp  collector.cc  collector.hh  state.cc  state.hh  tgf_focusd.cc  worker.cc
