[package]
name = "tg-focus"
version = "0.5.10815" # source + build_script
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
chrono = "0.4.26"
regex = "1.9.3"
serde = "1.0.183"
tdlib = "0.8.0"
tokio = { version = "1.29.1", features = ["sync", "rt-multi-thread", "macros"] }
toml = "0.7.6"

[profile.release]
strip = "symbols"
lto = true
